# Fitness_tracker

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  ai_helper.py  app.py  database.py  fitness.db  profile.py  pyproject.toml  requirements.txt  setup-gitlab-runner.sh
assets/: style.css
data/: style.css  translations.py
pages/: BMI.py  ai-coach.py  ai_coach.py  ai_diet plan.py  ai_workout planner.py  ai_workout_planner.py  dashboard.py  meals.py  profile.py  progress.py  rag_fitness_assistant.py  workout-streak.py  workout_streak.py
pages/i18n/: de.json  en.json  es.json  fr.json  hi.json  kn.json  ta.json  te.json
tests/: test_ai_helper.py  test_i18n.py
utils/: Translator.py  i18n.py  navigation.py  theme.py
